Fix hero responsiveness on smaller screens

--- a/src/page/Hero.css
+++ b/src/page/Hero.css
@@ -1,9 +1,9 @@
 .hero {
     background-color: #FFFFFF;
-    min-height: 400px;
+    /* min-height: 400px; */
     border: 1px solid #E6E6E6;
     border-top: none;
-    display: flex;
+    /* display: flex; */
     align-items: center;
 }
 
@@ -11,6 +11,12 @@
     text-align: left;
     margin: 30px 0 50px 0;
     font-size: 30px;
+}
+
+@media (min-width: 992px) {
+    .hero {
+        display: flex;
+    }
 }
 
 @media (min-width: 768px) {
@@ -27,4 +33,8 @@
     margin-left: -1px;
     margin-right: -1px;
     padding: 0;
+}
+
+.heroimagecontainer img {
+    width: 100%;
 }
